--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 	</head>
 
 	<body>
-		<div class="opener">
+		<div class="jumbotron">
 		<h1>This is adventure time</h1>
 			<p>Blah blah blah</p>
 		</div><--!close opener-->
 
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-  	
+
 	</body>
 
 </html>
