--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<body>
 		<div class="jumbotron">
 		<h1>This is Adventure Time</h1>
-			<p>Blah blah blah</p>
-		</div><--!close opener-->
+			<p>Boxes</p>
+		</div>
 
   	<script src="https://code.jquery.com-2.1.4.js"></script>
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
