--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
 	</head>
 
 	<body>
-		<div class="jumbotron">
-		<h1>This is Adventure Time</h1>
-			<p>Boxes</p>
+		<div class="container-fluid">
+			<div class="jumbotron">
+			<h1>Welcome to My Adventure Time</h1>
+				<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+			</div>
 		</div>
+
+		
 
   	<script src="https://code.jquery.com-2.1.4.js"></script>
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
